--- a/static/css/index.css
+++ b/static/css/index.css
@@ -5,7 +5,6 @@ body {
   margin: 0;
   height: 100vh;
   display: flex;
-  justify-content: center;
   align-items: center;
   overflow: hidden;
   scrollbar-width: none;
